# ml-demo-2026

./: CHANGELOG.md  pyproject.toml
lab/api_test/: main.py
src/serve/: Dockerfile  bq_io.py  cloudbuild.yaml  main.py  mapping.py  pydantic_models.py
src/train/: Dockerfile  cloudbuild.yaml  gcs_io.py  train.py
